[package]
name = "jwt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.38.0", features = ["full"]}

axum = {version = "0.7.5"}

jsonwebtoken = {version = "9.3.0" }

serde = "1.0.203"

serde_json = "1.0.117"

chrono = "0.4.38" 
